[package]
name = "mantle"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.14"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.37", features = ["full"] }
parking_lot = "0.12"
jwalk = "0.8"
async-trait = "0.1"
